# curvecraft

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/examples/: diode_basic.csv  diode_iv_example.csv  mosfet_id_vds_example.csv  mosfet_id_vgs_example.csv
docs/: README.md
docs/logs/: 0001-project-start.md  0002-m1-verification.md  2026-04-25-mosfet-id-vds-rdson.md  2026-04-25-mosfet-id-vgs-fitting.md  2026-04-26-m4-release-readiness.md
docs/releases/: v0.3.0-mosfet-id-vds-rdson.md
docs/reports/m1_diode_basic/: diode_m1_fit_report.md  diode_validation.cir  diode_validation.out  ngspice_validation_comparison.csv
docs/reports/m2_mosfet_id_vgs/: mosfet_id_vgs_validation.cir  mosfet_id_vgs_validation.out  mosfet_m2_id_vgs_fit_report.md  mosfet_ngspice_validation_comparison.csv
docs/reports/m3_mosfet_id_vds/: mosfet_id_vds_ngspice_validation_comparison.csv  (+7 more)
docs/theory/: diode-data-schema.md  diode-model.md  mosfet-data-schema.md  mosfet-id-vds-data-schema.md  mosfet-id-vds-fitting.md  mosfet-model.md  mosfet-threshold-extraction.md  rdson-extraction.md  spice-validation.md
examples/diode_basic/: README.md
examples/mosfet_id_vds/: README.md
examples/mosfet_id_vgs/: README.md
src/curvecraft/: __init__.py  cli.py
tests/: test_csv_loader.py  test_diode_fitting.py  test_diode_model.py  test_import.py  test_m1_demo.py  test_mosfet_csv_loader.py  test_mosfet_fitting.py  test_mosfet_id_vds_csv_loader.py  test_mosfet_id_vds_fitting.py  test_mosfet_id_vds_plotting.py  test_mosfet_level1_model.py  test_mosfet_plotting.py  test_mosfet_rdson_extraction.py  test_mosfet_threshold_extraction.py  test_ngspice_parser.py  test_ngspice_runner.py  test_plotting.py  test_report_generation.py  test_spice_generation.py  test_spice_validation.py
(+29 files in other folders)
