[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curvecraft"
version = "0.0.0"
description = "Compact semiconductor model fitting and validation tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "CurveCraft contributors" }
]
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "scipy",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/curvecraft"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["curvecraft"]
